# tmuxx

./: .gitignore  AGENTS.md  README.md  package.json  pyproject.toml  test_e2e_mcp.py  test_tmux_agent_unit.py  test_tmux_core_unit.py  test_tmuxx_tui_e2e.py  tmux_agent.py  tmux_core.py  tmux_mcp.py  tmux_mission.py  tmux_tui.py  tmuxx.py
.github/workflows/: ci.yml
skills/tmuxx/: SKILL.md
