[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tmuxx"
version = "0.1.0"
description = "TUI for humans. MCP server for AI agents. One interface to see, control, and automate tmux."
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
authors = [
    {name = "Daniel Tang"},
]
urls.Homepage = "https://github.com/LadderChaos/tmuxx"
urls.Repository = "https://github.com/LadderChaos/tmuxx"
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "textual>=0.70.0",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0"]

[tool.setuptools]
py-modules = ["tmux_core", "tmux_tui", "tmux_mcp"]

[project.scripts]
tmuxx = "tmux_tui:main"
tmuxx-mcp = "tmux_mcp:main"
