[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tmuxx"
version = "0.3.22"
description = "TUI for humans. Deterministic agent CLI for AI workflows. One interface to see, control, and automate tmux."
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [
    {name = "Daniel Tang"},
]
urls.Homepage = "https://github.com/LadderChaos/tmuxx"
urls.Repository = "https://github.com/LadderChaos/tmuxx"
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "textual>=0.70.0",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0", "pyte>=0.8", "Pillow>=10.0"]

[tool.setuptools]
py-modules = ["tmux_core", "tmuxx", "tmux_agent", "tmux_mcp"]

[project.scripts]
tmuxx = "tmuxx:main"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
